snapshot-tests/tests/snapshots/parser__bad_floats__underscore_after_dot.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[invalid-float]: 
  ┌─ underscore_after_dot:1:5
  │
1 │ a = 1._5
  │     ^ invalid float: nothing after decimal point
